# retrieve-jobs

./: .gitignore  .prettierrc  LICENSE  README.md  install-curl.cjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: publish.yaml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  main.rs  password_storage.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/delete/: route.ts
src/app/api/get/: route.ts
src/app/api/list/: route.ts
src/app/api/logout/: route.ts
src/components/MainLayout/: MainLayout.tsx
src/components/MainLayout/components/ThemeSwitchButton/: ThemeSwitchButton.tsx
src/components/MainPage/: MainPage.tsx
src/components/MainPage/components/Dashboard/: Dashboard.tsx
src/components/MainPage/components/Login/: Login.tsx
src/components/PageNotFound/: PageNotFound.tsx
src/components/misc/Checkbox/: Checkbox.tsx
src/components/misc/LoadingSpinner/: LoadingSpinner.tsx
src/lib/: crypto.ts  curl.ts  tauri.ts
src/utils/: allowed.ts  api.ts  download-file.ts  format-job-content.ts  ftp.ts  parse-jobs-list.test.ts  parse-jobs-list.ts  password-storage.ts  types.ts
