[package]
name = "retrieve-jobs"
version = "0.1.3"
description = "An app that retrieves job output from mainframes."
authors = ["Ryan Groch", "<ryan.w.groch@gmail.com>"]
license = ""
repository = "https://github.com/RyanGroch/retrieve-jobs"
default-run = "retrieve-jobs"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
whoami = "1"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.6.5", features = [ "dialog-save", "path-all", "fs-write-file"] }
suppaftp = "^6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
